@@ -29,7 +29,8 @@ public class RandomizerSettings {
     private WorldSettings worldSettings = new WorldSettings();
     private PatchSettings patchSettings = new PatchSettings();
     private PlayerSettings playerSettings = new PlayerSettings();
-    
+    private NamingSettings namingSettings = new NamingSettings();
+
     public void randomize(RandomizationContext context) {
         logSettings(context);
 
@@ -39,27 +40,27 @@ public class RandomizerSettings {
         evolutionSettings.randomize(context);
         starterSettings.randomize(context);
         worldSettings.randomize(context);
+        namingSettings.randomize(context);
         playerSettings.randomize(context);
     }
-    
+
     private void logSettings(RandomizationContext context) {
         context.logLine(LogLevel.ALWAYS, "Randomizer Settings: ");
-        
+
         Map<String, Object> configMap = new HashMap<>();
         configMap.put("seed", context.getInitialSeed());
         configMap.put("settings", serialize());
         configMap.put("raceLogging", context.isRaceLogging());
-        
+
         try (StringWriter writer = new StringWriter()) {
             Yaml.createYamlPrinter(writer).print(Yaml.createYamlDump(configMap).dump());
             context.logLine(LogLevel.ALWAYS, writer.toString());
-        }
-        catch (IOException e) {
+        } catch (IOException e) {
             // should never happen
             e.printStackTrace();
         }
-        
-        context.logLine(LogLevel.ALWAYS, "");        
+
+        context.logLine(LogLevel.ALWAYS, "");
     }
 
     public List<Tab> create(GlobalKeepData inputData, LanguageKeep languageKeep) {
@@ -70,19 +71,22 @@ public class RandomizerSettings {
             generalPane.setPadding(new Insets(10));
             generalPane.setOrientation(Orientation.VERTICAL);
             generalPane.setPrefWrapLength(400);
-            
+
             for (Setting setting : a.getValue())
                 generalPane.getChildren().add(setting.create(inputData, languageKeep));
-            
+
             return new Tab(a.getKey(), generalPane);
         }).collect(Collectors.toList());
     }
-    
+
     private List<Tuple<String, List<Setting>>> getSettingsMap() {
-        return List.of(Tuple.of("General", Arrays.asList(digimonSettings, evolutionSettings, skillSettings, worldSettings, patchSettings)),
-                       Tuple.of("New Game", Arrays.asList(starterSettings, playerSettings)));
+        return List.of(
+                Tuple.of("General",
+                        Arrays.asList(digimonSettings, evolutionSettings, skillSettings, worldSettings, patchSettings)),
+                Tuple.of("New Game", Arrays.asList(starterSettings, playerSettings)),
+                Tuple.of("Translation", Arrays.asList(namingSettings)));
     }
-    
+
     public Map<String, Object> serialize() {
         Map<String, Object> map = new HashMap<>();
         map.put("skillSettings", skillSettings.serialize());
@@ -92,14 +96,14 @@ public class RandomizerSettings {
         map.put("worldSettings", worldSettings.serialize());
         map.put("patchSettings", patchSettings.serialize());
         map.put("playerSettings", playerSettings.serialize());
-        
+
         return map;
     }
-    
+
     public void load(YamlMapping map) {
         if (map == null)
             return;
-        
+
         skillSettings.load(map.yamlMapping("skillSettings"));
         digimonSettings.load(map.yamlMapping("digimonSettings"));
         evolutionSettings.load(map.yamlMapping("evolutionSettings"));
